<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator_ar_tracker</name>
  <version>1.0.0</version>
  <description>
    Package for open_manipulator_ar_tracker.
  </description>
  <license>Apache 2.0</license>
  <author email="yhna@robotis.com">YongHo Na</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ar_track_alvar_msgs</depend>
  <depend>ar_track_alvar</depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
</package>
